--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -1,17 +1,34 @@
-name: Docker Image CI/CD
+name: Build and Push
+
 on:
   push:
-    branches: [ app ]
+    branches:
+      - app
+
 jobs:
-  build: 
-    runs-on: ubuntu-latest    
+  build-and-push:
+
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Build Image
-        run: |
-          docker build -t omdbsd/chineseocr  .
-      - name: Login to Registry
-        run: docker login --username=${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push Image
-        run: |
-          docker push omdbsd/chineseocr
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Set up Docker Buildx
+      run: |
+        docker buildx create --use
+    - name: Set date
+      id: date
+      run: echo "::set-output name=date::$(date +'%m-%d-%Y')"
+    - name: Authenticate
+      uses: docker/login-action@v1
+      with:
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build and Push image
+      run: |
+        docker buildx build \
+          --file ./ \
+          --platform linux/amd64\
+          --tag omdbsd/chineseocr:${{ steps.date.outputs.date }} \
+          --push .
