--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build and Push image
       run: |
         docker buildx build \
-          --file ./ \
+          --file ./Dockerfile \
           --platform linux/amd64\
           --tag omdbsd/chineseocr:${{ steps.date.outputs.date }} \
           --push .
