--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -17,7 +17,7 @@ jobs:
         docker buildx create --use
     - name: Set date
       id: date
-      run: echo "::set-output name=date::$(date +'%m-%d-%Y')"
+      run: echo "::set-output name=date::$(date +'%Y%m%d')"
     - name: Authenticate
       uses: docker/login-action@v1
       with:
