--- a/.github/workflows/test build.yml
+++ b/.github/workflows/test build.yml
@@ -28,6 +28,6 @@ jobs:
       run: |
         docker buildx build \
           --file ./testDockerfile \
-          --platform linux/amd64\
-          --tag omdbsd/chineseocr_testbuild:${{ steps.date.outputs.date }} \
+          --platform linux/arm64\
+          --tag omdbsd/ocr_testbuild:${{ steps.date.outputs.date }} \
           --push .
